HTML pages added

--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
     <h1> Goal App </h1>
     <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente non quis sint voluptates magnam aliquam nesciunt quisquam reprehenderit id provident animi, ipsa hic officia, quod magni! Ex voluptatibus, vel? Quo, impedit suscipit enim, et aliquid
         repellendus, consequuntur nobis vero ad facilis obcaecati. Quaerat eos eius iusto, autem natus at magni.</p>
-    <button> Continue </button>
+    <button href="{{url_for('get_goals')}}"> Continue </button>
 
 </body>
 
