app.routes complete in PY file and HTML pages all linked together

--- a/templates/add_goal.html
+++ b/templates/add_goal.html
@@ -16,7 +16,7 @@
                 </div>
             </div>
             <div class="input-field col s12">
-                <i class="material-icons prefix">assignment</i>
+                <a class="btn-floating pulse"><i class="material-icons prefix">assignment</i></a>
                 <input id="goal_name" name="goal_name" type="text">
                 <label for="icon_prefix">Goal Name</label>
             </div>
