--- a/templates/base.html
+++ b/templates/base.html
@@ -12,33 +12,56 @@
 </head>
 
 <body>
-    <div class="container">
-        {% block content %} {% endblock %}
-    </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function() {
-            $('.collapsible').collapsible();
-            $('select').material_select();
-            $(".button-collapse").sideNav();
-        });
 
-        $('.datepicker').pickadate({
-            selectMonths: true, // Creates a dropdown to control month
-            selectYears: 15, // Creates a dropdown of 15 years to control year,
-            today: 'Today',
-            clear: 'Clear',
-            close: 'Ok',
-            closeOnSelect: false // Close upon selecting a date,
-        });
-        $(".delete_task_btn").click(function() {
-            $('#hidden-task-id').attr('value', $(this).data("taskid"));
-        });
+    <body>
+        <header>
+            <nav>
+                <div class="nav-wrapper">
+                    <a class="brand-logo">Goals</a>
+                    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+                    <ul id="nav-mobile" class="right hide-on-med-and-down">
+                        <li><a href="{{ url_for('overview_page') }}">Overview</a></li>
+                        <li><a href="{{ url_for('get_goals') }}">Goals</a></li>
+                        <li><a href="{{ url_for('add_goal') }}">New Goal</a></li>
+                        <li><a href="{{ url_for('get_categories') }}">Manage Categories</a></li>
+                    </ul>
+                    <ul class="side-nav" id="mobile-demo">
+                        <li><a href="{{ url_for('overview_page') }}">Overview</a></li>
+                        <li><a href="{{ url_for('get_goals') }}">Goals</a></li>
+                        <li><a href="{{ url_for('add_goal') }}">New Goal</a></li>
+                        <li><a href="{{ url_for('get_categories') }}">Manage Categories</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
 
-        $('.modal').modal();
-    </script>
-</body>
+        <div class="container">
+            {% block content %} {% endblock %}
+        </div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+        <script type="text/javascript">
+            $(document).ready(function() {
+                $('.collapsible').collapsible();
+                $('select').material_select();
+                $(".button-collapse").sideNav();
+            });
+
+            $('.datepicker').pickadate({
+                selectMonths: true, // Creates a dropdown to control month
+                selectYears: 15, // Creates a dropdown of 15 years to control year,
+                today: 'Today',
+                clear: 'Clear',
+                close: 'Ok',
+                closeOnSelect: false // Close upon selecting a date,
+            });
+            $(".delete_task_btn").click(function() {
+                $('#hidden-task-id').attr('value', $(this).data("taskid"));
+            });
+
+            $('.modal').modal();
+        </script>
+    </body>
 
 </html>
 </body>
