--- a/templates/home.html
+++ b/templates/home.html
@@ -5,14 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css" />
     <title>Document</title>
 </head>
 
 <body>
-    <h1> Goal App </h1>
-    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente non quis sint voluptates magnam aliquam nesciunt quisquam reprehenderit id provident animi, ipsa hic officia, quod magni! Ex voluptatibus, vel? Quo, impedit suscipit enim, et aliquid
-        repellendus, consequuntur nobis vero ad facilis obcaecati. Quaerat eos eius iusto, autem natus at magni.</p>
-    <button href="{{url_for('get_goals')}}"> Continue </button>
+
+    <container>
+        <img class="responsive-img mainimage" src="{{url_for('static', filename='images/goal_home_image.jpg')}}">
+
+        <div class="intro">
+            <h1> Goal App </h1>
+            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente non quis sint voluptates magnam aliquam nesciunt quisquam reprehenderit id provident animi, ipsa hic officia, quod magni! Ex voluptatibus, vel? Quo, impedit suscipit enim,
+                et aliquid repellendus, consequuntur nobis vero ad facilis obcaecati. Quaerat eos eius iusto, autem natus at magni.</p>
+            <a href="{{url_for('overview_page')}}"> Continue </a>
+        </div>
+    </container>
 
 </body>
 
