add step functionality incorporated and steps added to Mongo DB

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,5 +8,14 @@
 }
 
 
+.goals {
+    text-align: left;
+    margin-left: 20;
+}
 
 
+.card_size {
+    width: 25%;
+    float: left;
+    padding: 5px;
+}
