--- a/templates/categories.html
+++ b/templates/categories.html
@@ -1,6 +1,25 @@
-{% extends 'base.html' %} {% block content %} {% for category in categories %}
-<p class="card-panel hoverable">{{ category }}</p>
+{% extends 'base.html' %} {% block content %}
+
+{% for category in categories %}
+
+
+        <div class="card card_size">
+            <div class="card-image">
+                <img src="{{url_for('static', filename='images/goal_home_image.jpg')}}">
+                <span class="card-title">{{ category }}</span>
+            </div>
+        </div>
+
 {% endfor %}
+
+        <div class="card card_size">
+            <div class="card-image">
+                <img src="{{url_for('static', filename='images/goal_home_image.jpg')}}">
+                <span class="card-title">Add Category</span>
+            </div>
+        </div>
+
+
 
 <form action="categories/add" method="POST" class="col s12">
     <div class="row">
@@ -14,5 +33,7 @@
              </button>
     </div>
 </form>
+
+
 
 {% endblock content %}
