--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <title>Document</title>
 </head>
 
@@ -18,9 +19,8 @@
 
         <div class="intro">
             <h1> Goal App </h1>
-            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente non quis sint voluptates magnam aliquam nesciunt quisquam reprehenderit id provident animi, ipsa hic officia, quod magni! Ex voluptatibus, vel? Quo, impedit suscipit enim,
-                et aliquid repellendus, consequuntur nobis vero ad facilis obcaecati. Quaerat eos eius iusto, autem natus at magni.</p>
-            <a href="{{url_for('overview_page')}}"> Continue </a>
+            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente non quis sint voluptates magnam aliquam nesciunt quisquam reprehenderit id provident animi, ipsa hic officia, quod magni! Ex voluptatibus, vel? Quo</p>
+            <a class="waves-effect btn" href="{{url_for('overview_page')}}"> Continue </a>
         </div>
     </container>
 
