--- a/templates/goals.html
+++ b/templates/goals.html
@@ -3,7 +3,7 @@
 <h2>{{ category }}</h2>
 
 {% for category in categories %}
-<a href="{{ url_for ('get_goals_by_category', category=category) }}" class="waves-effect waves-teal btn-flat">{{ category }}</a> | {% endfor %} {% for goal in goals %}
+<a href="{{ url_for ('get_goals_by_category', category=category.category_name) }}"><div class="category-label"><img class="small-img" src="{{category.image}}"><p class="category-title">{{ category.category_name }}</p></div></a> {% endfor %} {% for goal in goals %}
 
 <p>
     <a href="{{url_for('goal_details', category=goal.category_name, goal_id=goal._id)}}">{{goal.goal_name}}</a>
