--- a/templates/base.html
+++ b/templates/base.html
@@ -8,62 +8,57 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <title>Document</title>
 </head>
 
 <body>
+    <header>
+        <nav>
+            <div class="nav-wrapper">
+                <a class="brand-logo"> Goal Getter</a>
+                <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li><a class="btn" href="{{ url_for('overview_page') }}">Overview</a></li>
+                    <li><a class="btn" href="{{ url_for('get_goals') }}">Goals</a></li>
+                    <li><a class="btn" href="{{ url_for('get_categories') }}">Add a new Category</a></li>
+                </ul>
+                <ul class="side-nav" id="mobile-demo">
+                    <li><a class="btn" href="{{ url_for('overview_page') }}">Overview</a></li>
+                    <li><a class="btn" href="{{ url_for('get_goals') }}">Goals</a></li>
+                    <li><a class="btn" href="{{ url_for('get_categories') }}">Add a new Category</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 
-    <body>
-        <header>
-            <nav>
-                <div class="nav-wrapper">
-                    <a class="brand-logo"> Goals</a>
-                    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-                    <ul id="nav-mobile" class="right hide-on-med-and-down">
-                        <li><a class="btn" href="{{ url_for('overview_page') }}">Overview</a></li>
-                        <li><a class="waves-orange btn" href="{{ url_for('get_goals') }}">Goals</a></li>
-                        <li><a class="waves-effect btn" href="{{ url_for('add_goal') }}">New Goal</a></li>
-                        <li><a class="waves-light btn" href="{{ url_for('get_categories') }}">Manage Categories</a></li>
-                    </ul>
-                    <ul class="side-nav" id="mobile-demo">
-                        <li><a class="waves-purple btn" href="{{ url_for('overview_page') }}">Overview</a></li>
-                        <li><a class="waves-orange btn" href="{{ url_for('get_goals') }}">Goals</a></li>
-                        <li><a class="waves-effect waves-light btn" href="{{ url_for('add_goal') }}">New Goal</a></li>
-                        <li><a class="waves-effect waves-light btn" href="{{ url_for('get_categories') }}">Manage Categories</a></li>
-                    </ul>
-                </div>
-            </nav>
-        </header>
+  
+    <div>
+        {% block content %} {% endblock %}
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $('.collapsible').collapsible();
+            $('select').material_select();
+            $(".button-collapse").sideNav();
+        });
 
-        <div class="container">
-            {% block content %} {% endblock %}
-        </div>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-        <script type="text/javascript">
-            $(document).ready(function() {
-                $('.collapsible').collapsible();
-                $('select').material_select();
-                $(".button-collapse").sideNav();
-            });
+        $('.datepicker').pickadate({
+            selectMonths: true, // Creates a dropdown to control month
+            selectYears: 15, // Creates a dropdown of 15 years to control year,
+            today: 'Today',
+            clear: 'Clear',
+            close: 'Ok',
+            closeOnSelect: false // Close upon selecting a date,
+        });
+        $(".delete_task_btn").click(function() {
+            $('#hidden-task-id').attr('value', $(this).data("taskid"));
+        });
 
-            $('.datepicker').pickadate({
-                selectMonths: true, // Creates a dropdown to control month
-                selectYears: 15, // Creates a dropdown of 15 years to control year,
-                today: 'Today',
-                clear: 'Clear',
-                close: 'Ok',
-                closeOnSelect: false // Close upon selecting a date,
-            });
-            $(".delete_task_btn").click(function() {
-                $('#hidden-task-id').attr('value', $(this).data("taskid"));
-            });
-
-            $('.modal').modal();
-        </script>
-    </body>
-
-</html>
+        $('.modal').modal();
+    </script>
 </body>
 
 </html>
