--- a/templates/overview.html
+++ b/templates/overview.html
@@ -1,13 +1,8 @@
 {% extends 'base.html' %} {% block content %}
 
-<h3> Overview of goals by catergory - chart? </h3>
+<h3> Goals in Progress </h3>
 
-<h3> lists of name of goals and their category?</h3>
+<h3> Completed Goals </h3>
 
-<h3> next goal due </h3>
-
-<h3> Goals due this month </h3>
-
-<h3> Goals completed in the last month </h3>
 
 {% endblock %}
