--- a/templates/oldgoals.html
+++ b/templates/oldgoals.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %} {% block content %}
 
+<container class="font">
+    
 <h2>{{ category }}</h2>
 
 {% for category in categories %}
-<a href="{{ url_for ('get_goals_by_category', category=category) }}" class="waves-effect waves-teal btn-flat">{{ category }}</a> | {% endfor %} {% for goal in goals %}
+<a href="{{ url_for ('get_goals_by_category', category=category.category_name) }}"><div class="category-label"><img class="small-img" src="{{category.image}}"><p class="category-title">{{ category.category_name }}</p></div></a> {% endfor %} {% for goal in goals %}
 
 <p>
     <a href="{{url_for('goal_details', category=goal.category_name, goal_id=goal._id)}}">{{goal.goal_name}}</a>
@@ -20,112 +22,4 @@
 
 <a href="{{url_for('add_goal')}}">Add Goal</a> {% endblock %}
 
-
-
-{% extends 'base.html' %} {% block content %}
-
-
-
-<h2>{{ category }}</h2>
-
-{% for category in categories %}
-<a href="{{ url_for ('get_goals_by_category', category=category) }}" class="waves-effect waves-teal btn-flat">{{ category }}</a> | {% endfor %} {% for goal in goals %}
-
-<p>
-    <a href="{{url_for('goal_details', category=goal.category_name, goal_id=goal._id)}}">{{goal.goal_name}}</a>
-</p>
-<p>
-    {{goal.due_date}}
-</p>
-<p>
-    {{goal.goal_reasons}}
-</p>
-<br>
-
-{% endfor %}
-
-<!--<li>-->
-<!--    <div class="collapsible-header">-->
-<!--        <div class="col s3">-->
-<!--            <i class="material-icons">expand_more</i>-->
-
-<!--            <a href="#modal1" class="delete_goal_btn waves-effect waves-light btn btn_small modal-trigger" data-goalid={{goal._id}}>Done</a>-->
-<!--        </div>-->
-
-<!--        <div class="task_header col s9">-->
-<!--            <a href="{{url_for('goal_details', category=goal.category_name, goal_id=goal._id)}}">{{goal.goal_name}}</a> - {{goal.due_date}}-->
-<!--        </div>-->
-<!--    </div>-->
-<!--    <div class="collapsible-body">-->
-<!--        <img src="{{goal.image}}">-->
-<!--        <span class="card-panel red lighten-5">-->
-<!--                {{goal.goal_reasons}} -->
-<!--            </span>-->
-<!--    </div>-->
-<!--</li>-->
-
-
-
-<a href="{{url_for('add_goal')}}">Add Goal</a> {% endblock %}
-
-
-
-
-<!--    {% for category in categories %}-->
-
-<!--    <div class="card card_size">-->
-<!--        <div class="card-image">-->
-<!--            <img src="{{url_for('static', filename='images/goal_home_image.jpg')}}">-->
-<!--            <a href="{{ url_for ('get_goals_by_category', category=category) }}" class="waves-effect waves-teal btn-flat">{{ category }}</a>-->
-<!--        </div>-->
-<!--    </div>-->
-
-<!--    {% endfor %} {% for goal in goals %}-->
-<!--<div class="card-reveal">-->
-<!--     <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>-->
-<!--    <p>{{goal.goal_name}} </p>-->
-<!--</div>-->
-<!--    {% endfor %}-->
-
-
-
-old categories
-
-<div class="card card_size">
-    <div class="card-image">
-        <img src="{{url_for('static', filename='images/goal_home_image.jpg')}}">
-        <span class="card-title">{{ category }}</span>
-    </div>
-</div>
-
-{% endfor %}
-
-
-<form action="categories/add" method="POST" class="col s12">
-    <div class="row">
-        <div class="input-field col s12">
-            <input id="category_name" name="category_name" type="text">
-            <label for="icon_prefix">Category Name</label>
-        </div>
-    </div>
-    <div class="row">
-        <button class="btn waves-effect waves-light" type="submit">Add Category
-             </button>
-    </div>
-
-    <div class="row">
-        <div class="file-field input-field">
-            <div class="btn">
-                <span>Image</span>
-                <input type="file" name="image">
-            </div>
-            <div class="file-path-wrapper">
-                <input class="file-path validate" type="text">
-            </div>
-        </div>
-    </div>
-
-
-</form>
-
-
+</container>
