--- a/templates/goals.html
+++ b/templates/goals.html
@@ -5,7 +5,10 @@
 <h2>{{ category }}</h2>
 
 {% for category in categories %}
-<a href="{{ url_for ('get_goals_by_category', category=category.category_name) }}"><div class="category-label"><img class="small-img" src="{{category.image}}"><p class="category-title">{{ category.category_name }}</p></div></a> {% endfor %} {% for goal in goals %}
+<a href="{{ url_for ('get_goals_by_category', category=category.category_name) }}"><div class="category-label"><img class="small-img" src="{{category.image}}"><p class="category-title">{{ category.category_name }}</p></div></a> {% endfor %} 
+<a href ="/categories"> Add Category</a>
+
+{% for goal in goals %}
 
 <p>
     <a href="{{url_for('goal_details', category=goal.category_name, goal_id=goal._id)}}">{{goal.goal_name}}</a>
@@ -20,6 +23,9 @@
 
 {% endfor %}
 
-<a href="{{url_for('add_goal')}}">Add Goal</a> {% endblock %}
+
+
 
 </container>
+
+{% endblock %}
