--- a/templates/goal_detail.html
+++ b/templates/goal_detail.html
@@ -2,7 +2,7 @@
 
 
 
-<container>
+<container class =goaldetail>
     <p> Category: {{ goal.category_name }}</p>
     <p> Goal Name: {{ goal.goal_name }}</p>
     <p> Why do I want to achieve this goal? {{ goal.goal_reasons }}</p>
