--- a/templates/base.html
+++ b/templates/base.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fredoka+One|Roboto+Slab" rel="stylesheet">
     <title>Document</title>
 </head>
 
@@ -16,16 +16,17 @@
     <header>
         <nav>
             <div class="nav-wrapper">
-                <a class="brand-logo"> Goal Getter</a>
+                <a class="brand-logo"> Goal Getter </a>
                 <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><a class="btn" href="{{ url_for('overview_page') }}">Overview</a></li>
-                    <li><a class="btn" href="{{ url_for('get_goals') }}">Goals</a></li>
+                    <li><a class="nav-font" href="{{ url_for('overview_page') }}">Overview</a></li>
+                    <li><a class="nav-font" href="{{ url_for('get_goals') }}">Goals</a></li>
+                    <li><a class="nav-font" href="/categories">Add Category</a></li>
                 </ul>
                 <ul class="side-nav" id="mobile-demo">
-                    <li><a class="btn" href="{{ url_for('overview_page') }}">Overview</a></li>
-                    <li><a class="btn" href="{{ url_for('get_goals') }}">Goals</a></li>
-
+                    <li><a class="nav-font" href="{{ url_for('overview_page') }}">Overview</a></li>
+                    <li><a class="nav-font" href="{{ url_for('get_goals') }}">Goals</a></li>
+                    <li><a class="nav-font" href="/categories">Add Category</a></li>
                 </ul>
             </div>
         </nav>
