--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
     <header>
         <nav>
             <div class="nav-wrapper">
-                <a class="brand-logo"> Goal Getter </a>
+                <a class="logo"> Goal Getter </a>
                 <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a class="nav-font" href="{{ url_for('overview_page') }}">Overview</a></li>
