--- a/templates/home.html
+++ b/templates/home.html
@@ -17,8 +17,9 @@
 
     <img class="responsive-img" src="{{url_for('static', filename='images/goal_home_image.jpg')}}">
 
-    <div class="row intro">
-        <div class="col s8 m8 l8"><span>Goal set your way to your best year yet!</span> <br><a href="{{url_for('overview_page')}}"> Continue </div>
+     
+     <div class="row intro">
+        <div class="col m5 l7 hide-on-small-only"><span>Goal set your way to your best year yet!</span></div><a class="col m8 l8"  href="{{url_for('overview_page')}}"> Continue </a>
     </div>
 
  </body>
