--- a/templates/base.html
+++ b/templates/base.html
@@ -9,27 +9,30 @@
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fredoka+One|Roboto+Slab" rel="stylesheet">
+    
     <title>Document</title>
 </head>
 
 <body>
     <header>
-        <nav>
-            <div class="nav-wrapper">
-                <a class="logo"> Goal Getter </a>
-                <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-                <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><a class="nav-font" href="{{ url_for('overview_page') }}">Overview</a></li>
-                    <li><a class="nav-font" href="{{ url_for('get_goals') }}">Goals</a></li>
-                    <li><a class="nav-font" href="/categories">Add Category</a></li>
-                </ul>
-                <ul class="side-nav" id="mobile-demo">
-                    <li><a class="nav-font" href="{{ url_for('overview_page') }}">Overview</a></li>
-                    <li><a class="nav-font" href="{{ url_for('get_goals') }}">Goals</a></li>
-                    <li><a class="nav-font" href="/categories">Add Category</a></li>
-                </ul>
-            </div>
-        </nav>
+        <div class="navbar-fixed">
+            <nav>
+                <div class="nav-wrapper">
+                    <a class="logo hide-on-small-only"> Goal Getter </a>
+                    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+                    <ul id="nav-mobile" class="right hide-on-med-and-down">
+                        <li><a class="nav-font" href="{{ url_for('overview_page') }}">Overview</a></li>
+                        <li><a class="nav-font" href="{{ url_for('get_goals') }}">Goals</a></li>
+                        <li><a class="nav-font" href="/categories">Add Category</a></li>
+                    </ul>
+                    <ul class="side-nav" id="mobile-demo">
+                        <li><a class="nav-font" href="{{ url_for('overview_page') }}">Overview</a></li>
+                        <li><a class="nav-font" href="{{ url_for('get_goals') }}">Goals</a></li>
+                        <li><a class="nav-font" href="/categories">Add Category</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
     </header>
 
 
